Add save ptt articles api and consumer
